# hw7

./: README.md  main.py  prediction.ipynb  pyproject.toml  request.py  sample.json  wrong_request.py  wrong_sample.json
src/mlhelper/data_prep/: dataloader.py  feature_engineer.py  nullhandler.py
src/mlhelper/interfaces/: base.py
src/mlhelper/models/: models.py
